Brought DB storing and loading to work, some updates to GUI

--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -49,6 +49,7 @@
             }
         ],
         "cfgCltuBlockSize": "CltuBS_8",
+        "cfgStorePUSPackets": true,
         "cfgEDEN": [
             {
                 "cfgEdenName": "EDEN 1",
