--- a/esa-db-mongodb/esa-db-mongodb.cabal
+++ b/esa-db-mongodb/esa-db-mongodb.cabal
@@ -161,7 +161,7 @@ library
                      -funbox-strict-fields
 
 
-executable esa-db-mongodb-test
+executable mongodb-speed-test
   -- Base language which the package is written in.
   default-language:    Haskell2010
   default-extensions:
@@ -211,7 +211,7 @@ executable esa-db-mongodb-test
   hs-source-dirs:      test
 
   -- The entrypoint to the test suite.
-  main-is:             MyLibTest.hs
+  main-is:             SpeedComparison.hs
 
   -- Test dependencies.
   build-depends:       
@@ -225,4 +225,72 @@ executable esa-db-mongodb-test
     , mongoDB
     , bson
     , esa-db-mongodb
+
+
+
+executable mongodb-test
+  -- Base language which the package is written in.
+  default-language:    Haskell2010
+  default-extensions:
+      BangPatterns
+      BinaryLiterals
+      ConstraintKinds
+      DataKinds
+      DefaultSignatures
+      DeriveDataTypeable
+      DeriveFoldable
+      DeriveFunctor
+      DeriveGeneric
+      DeriveTraversable
+      DoAndIfThenElse
+      EmptyDataDecls
+      ExistentialQuantification
+      FlexibleContexts
+      FlexibleInstances
+      FunctionalDependencies
+      GADTs
+      DeriveAnyClass
+      InstanceSigs
+      KindSignatures
+      LambdaCase
+      MultiParamTypeClasses
+      MultiWayIf
+      NamedFieldPuns
+      NoImplicitPrelude
+      OverloadedStrings
+      PartialTypeSignatures
+      PatternGuards
+      PolyKinds
+      RankNTypes
+      RecordWildCards
+      ScopedTypeVariables
+      StandaloneDeriving
+      TupleSections
+      TypeFamilies
+      TypeSynonymInstances
+      TypeApplications
+      ViewPatterns
+      NumericUnderscores
+  -- The interface type and version of the test suite.
+  --type:                exitcode-stdio-1.0
+
+  -- The directory where the test specifications are found.
+  hs-source-dirs:      test
+
+  -- The entrypoint to the test suite.
+  main-is:             MongoDBTest.hs
+
+  -- Test dependencies.
+  build-depends:       
+    base >=4.7 && <5
+    , rio
+    , bytestring
+    , time
+    , esa-base 
+    , unliftio
+    , text
+    , mongoDB
+    , bson
+    , esa-db-mongodb
+    , hspec
 
