Added Compact Regions to DataModel

--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -187,6 +187,7 @@ library
     , word24
     , closed
     , bytestring-to-vector
+    , ghc-compact
 
 
   -- Directories containing source files.
