Added filtered event handler

--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -68,6 +68,7 @@ library
         Data.PUS.NcduToTMFrame
         Data.PUS.Counter
         Data.PUS.MissionSpecific.Default
+        Data.PUS.EventHandler
         Protocol.NCTRS
         Protocol.NCTRSProcessor
         Protocol.EDEN
