--- a/s2k_config.json
+++ b/s2k_config.json
@@ -1,6 +1,7 @@
 {
     "aurisMIB": null,
     "aurisMission": "DEFAULT",
+    "aurisTheme": "ThemeLight",
     "aurisDbConfig": {
         "cfgMongoHost": "localhost",
         "cfgMongoPort": null
