--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -100,6 +100,7 @@ library
     Data.PUS.CLCW
     Data.PUS.SegmentationFlags
     Data.PUS.ExtractedDU
+    Data.PUS.LiveState
     Data.PUS.MissionSpecific.Definitions
     Protocol.ProtocolInterfaces
     Conduit.PayloadParser
