--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -81,7 +81,7 @@ library
         Verification.Verification
         Verification.Commands
         Verification.Processor
-
+        Persistence.DbResultProcessor
 
     hs-source-dirs: src
     default-language: Haskell2010
@@ -167,7 +167,7 @@ library
         , sorted-list
         , deepseq
         , esa-base
---        , esa-db
+        , esa-db-mongodb
         , network
         , streaming-commons
         , text-short
