Updates for verification, MIB loading

--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -4,6 +4,7 @@
         "cfgMongoPort": null
     },
     "aurisMIB": null,
+    "aurisTheme": "ThemeLight",
     "aurisMission": "DEFAULT",
     "aurisPusConfig": {
         "cfgCnC": [
