--- a/EdenRouterCnc1Config.json
+++ b/EdenRouterCnc1Config.json
@@ -2,6 +2,7 @@
     "aurisMIB": null,
     "aurisMission": "DEFAULT",
     "aurisDbConfig": null,
+    "aurisTheme": "ThemeLight",
     "aurisPusConfig": {
         "cfgCnC": [
             {
