--- a/EdenRouterEden1Config.json
+++ b/EdenRouterEden1Config.json
@@ -1,6 +1,8 @@
 {
     "aurisMIB": null,
     "aurisMission": "DEFAULT",
+    "aurisDbConfig": null,
+    "aurisTheme": "ThemeLight",
     "aurisPusConfig": {
         "cfgCnC": [
         ],
