First Retrieval from GUI!

--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -108,7 +108,8 @@ library
     Persistence.LogEvent
     Persistence.Logging
     Persistence.DbBackend
-
+    Persistence.DBQuery 
+    
   -- Modules included in this library but not exported.
   -- other-modules:
 
