Updated config for tests

--- a/EdenRouterEden1Config.json
+++ b/EdenRouterEden1Config.json
@@ -44,10 +44,29 @@
                 "cfgEdenHost": "localhost",
                 "cfgEdenType": "SCOE",
                 "cfgEdenPort": 40300
+            },
+            {
+                "cfgEdenID": 2,
+                "cfgEdenName": "TSC EDEN",
+                "cfgEdenHost": "localhost",
+                "cfgEdenType": "SCOE",
+                "cfgEdenPort": 40301
+            },
+            {
+                "cfgEdenID": 3,
+                "cfgEdenName": "Simulator",
+                "cfgEdenHost": "localhost",
+                "cfgEdenType": "SCOE",
+                "cfgEdenPort": 40302
             }
         ],
-        "cfgTMSegLength": "TMSegment65536",
-        "cfgTMFrameHasCRC": true
+        "cfgStoreTMFrames": true,
+        "cfgStorePUSPackets": true,
+        "cfgTMFrame": {
+            "cfgMaxTMFrameLen": 1115,
+            "cfgTMSegLength": "TMSegment65536",
+            "cfgTMFrameHasCRC": true
+        }
     },
     "aurisLogLevel": {
         "tag": "LogLevelDebug"
