--- a/gui-base/gui-base.cabal
+++ b/gui-base/gui-base.cabal
@@ -96,6 +96,7 @@ library
     , haskell-gi-base
     , esa-base
     , esa-space-protocols
+    , time
 
 
   default-extensions:
@@ -160,3 +161,24 @@ library
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields -freverse-errors
 
+
+executable time-picker-test
+  -- Base language which the package is written in.
+  default-language:    Haskell2010
+
+  -- The interface type and version of the test suite.
+  --type:                exitcode-stdio-1.0
+
+  -- The directory where the test specifications are found.
+  hs-source-dirs:      test
+
+  -- The entrypoint to the test suite.
+  main-is:             TimePickerTest.hs
+
+  -- Test dependencies.
+  build-depends:       
+    base 
+    , rio 
+    , gi-gtk 
+    , gui-base
+    , esa-base
