--- a/s2k_config.json
+++ b/s2k_config.json
@@ -1,6 +1,6 @@
 {
     "aurisMIB": null,
-    "aurisMission": "DEFAULT",
+    "aurisMission": "S2K_TEST",
     "aurisTheme": "ThemeLight",
     "aurisDbConfig": {
         "cfgMongoHost": "localhost",
