Added some more reactive values

--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -94,7 +94,8 @@ Executable AURISi
     tar,
     zlib,
     stm,
-    ghc-compact
+    ghc-compact,
+    keera-hails-reactivevalues
 
   default-extensions:
         
