Updated for queries

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ wiki-pages/.#esa-base.org
 AURISi
 aurisi/data/MainWindow.glade~
 AURIS_Unoptimzed.tar.bz2
+test-data/tm_10000_pkts.raw
+cnc_tc_10000.raw
