Added Data Model Tab

--- a/auris-control-displays/auris-control-displays.cabal
+++ b/auris-control-displays/auris-control-displays.cabal
@@ -64,6 +64,7 @@ library
   -- Modules exported by the library.
   exposed-modules:     
     GUI.ConnectionTab
+    GUI.DataModelTab
 
   -- Modules included in this library but not exported.
   -- other-modules:
@@ -86,6 +87,7 @@ library
     , esa-base
     , esa-space-protocols
     , gui-base
+    , text-short
 
   default-extensions:
         
