--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -102,6 +102,7 @@ library
     Data.PUS.ExtractedDU
     Data.PUS.LiveState
     Data.PUS.MissionSpecific.Definitions
+    Data.PUS.DataModelInfo
     Protocol.ProtocolInterfaces
     Conduit.PayloadParser
     Persistence.Conversion.Types
