--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -190,16 +190,16 @@ library
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields
 
-executable WriteConfig
-    main-is: WriteConfig.hs
-    default-language: Haskell2010
-    hs-source-dirs: src/test
-    ghc-options: -Wall -O
-    build-depends:
-        esa-space-protocols -any,
-        esa-base -any,
-        base ==4.*,
-        bytestring >=0.10.8.2 && <0.11
+-- executable WriteConfig
+--     main-is: WriteConfig.hs
+--     default-language: Haskell2010
+--     hs-source-dirs: src/test
+--     ghc-options: -Wall -O
+--     build-depends:
+--         esa-space-protocols -any,
+--         esa-base -any,
+--         base ==4.*,
+--         bytestring >=0.10.8.2 && <0.11
 
 
 benchmark TestBits
@@ -324,48 +324,48 @@ benchmark CmdEncodePerf2
         conduit-extra
 
 
-executable CommandingTest
-    main-is: CommandingTest.hs
-    default-language: Haskell2010
-    hs-source-dirs: src/test
-    if flag(llvm)
-        ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
-    else
-        ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
-    build-depends:
-        esa-space-protocols
-        , esa-base
-        --, esa-db
-        , base
-        , bytestring
-        , conduit
-        , conduit-extra
-        , rio
-        , text
-        , unliftio
-        , refined 
+-- executable CommandingTest
+--     main-is: CommandingTest.hs
+--     default-language: Haskell2010
+--     hs-source-dirs: src/test
+--     if flag(llvm)
+--         ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
+--     else
+--         ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
+--     build-depends:
+--         esa-space-protocols
+--         , esa-base
+--         --, esa-db
+--         , base
+--         , bytestring
+--         , conduit
+--         , conduit-extra
+--         , rio
+--         , text
+--         , unliftio
+--         , refined 
 
 
-executable CommandingAD
-    main-is: CommandingAD.hs
-    default-language: Haskell2010
-    hs-source-dirs: src/test
-    if flag(llvm)
-        ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
-    else
-        ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
-    build-depends:
-        esa-space-protocols
-        , esa-base
-        , base
-        , bytestring
-        , conduit
-        , conduit-extra
-        , rio
-        , text
-        , unliftio
-        , stm-conduit
-        , refined
+-- executable CommandingAD
+--     main-is: CommandingAD.hs
+--     default-language: Haskell2010
+--     hs-source-dirs: src/test
+--     if flag(llvm)
+--         ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
+--     else
+--         ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
+--     build-depends:
+--         esa-space-protocols
+--         , esa-base
+--         , base
+--         , bytestring
+--         , conduit
+--         , conduit-extra
+--         , rio
+--         , text
+--         , unliftio
+--         , stm-conduit
+--         , refined
 
 
 test-suite TCEncodeTests
@@ -479,23 +479,23 @@ test-suite VerificationTest
         , rio
 
 
-executable RetrievalTest
-    main-is: RetrievalTest.hs
-    default-language: Haskell2010
-    hs-source-dirs: src/test
-    if flag(llvm)
-        ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
-    else
-        ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
-    build-depends:
-        esa-space-protocols
-        , esa-base
-        , esa-db-mongodb
-        , base
-        , bytestring
-        , conduit
-        , conduit-extra
-        , rio
-        , text
-        , unliftio
-        , refined 
+-- executable RetrievalTest
+--     main-is: RetrievalTest.hs
+--     default-language: Haskell2010
+--     hs-source-dirs: src/test
+--     if flag(llvm)
+--         ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
+--     else
+--         ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
+--     build-depends:
+--         esa-space-protocols
+--         , esa-base
+--         , esa-db-mongodb
+--         , base
+--         , bytestring
+--         , conduit
+--         , conduit-extra
+--         , rio
+--         , text
+--         , unliftio
+--         , refined 
