Added detailed data processing graph

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ aurisi/data/MainWindow.glade~
 AURIS_Unoptimzed.tar.bz2
 test-data/tm_10000_pkts.raw
 cnc_tc_10000.raw
+esa-base/src/Conduit/irgendwas.txt
