--- a/stack_sle.yaml
+++ b/stack_sle.yaml
@@ -42,6 +42,7 @@ packages:
 - auris-tm-displays
 - auris-tc-displays
 - auris-control-displays
+- lib-aurisi
 - aurisi
 - Chart-gi-cairo
 - sle-wrapper/esa-sle
@@ -82,6 +83,8 @@ flags:
     sle: True
   esa-space-protocols:
     sle: True
+  lib-aurisi:
+    sle: true
   aurisi:
     sle: True 
 
