--- a/auris-tm-displays/auris-tm-displays.cabal
+++ b/auris-tm-displays/auris-tm-displays.cabal
@@ -79,9 +79,7 @@ library
     gi-cairo-connector,
     gi-cairo-render,
     gi-gdk,
-    haskell-gi-base,
-    keera-callbacks,
-    keera-hails-reactivevalues
+    haskell-gi-base
 
 
   default-extensions:
