--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -229,7 +229,7 @@ library
 
   ghc-options: -O0 -g2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
             -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-            -funbox-strict-fields
+            -funbox-strict-fields -freverse-errors
 
   if flag(optimize)
         ghc-options: -O2 
