--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -124,6 +124,8 @@ library
     Protocol.ProtocolInterfaces
     Protocol.ProtocolSLE
     Conduit.PayloadParser
+    Conduit.TimedBuffer
+    Conduit.TimedConduit
     Persistence.Conversion.Types
     Persistence.LogEvent
     Persistence.Logging
@@ -176,6 +178,7 @@ library
         ViewPatterns
         NumericUnderscores
         TypeApplications
+        DerivingStrategies
 
   -- Other library packages from which modules are imported.
   build-depends:       base == 4.*
@@ -216,6 +219,8 @@ library
     , vector-space
     , scientific
     , time
+    , stm
+    , array
 
 
   -- Directories containing source files.
@@ -236,3 +241,19 @@ library
 
   if flag(llvm)
         ghc-options: -O2 -fllvm -optlo-O3
+
+
+
+executable WriteBufferTest
+    main-is: WriteBufferTest.hs
+    default-language: Haskell2010
+    hs-source-dirs: tests
+    ghc-options: -Wall -O -threaded -rtsopts 
+    build-depends:
+        base ==4.*,
+        bytestring >=0.10.8.2 && <0.11,
+        rio,
+        text-short,
+        unliftio,
+        stm,
+        esa-base
