--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -244,16 +244,16 @@ library
 
 
 
-executable WriteBufferTest
-    main-is: WriteBufferTest.hs
-    default-language: Haskell2010
-    hs-source-dirs: tests
-    ghc-options: -Wall -O -threaded -rtsopts 
-    build-depends:
-        base ==4.*,
-        bytestring >=0.10.8.2 && <0.11,
-        rio,
-        text-short,
-        unliftio,
-        stm,
-        esa-base
+-- executable WriteBufferTest
+--     main-is: WriteBufferTest.hs
+--     default-language: Haskell2010
+--     hs-source-dirs: tests
+--     ghc-options: -Wall -O -threaded -rtsopts 
+--     build-depends:
+--         base ==4.*,
+--         bytestring >=0.10.8.2 && <0.11,
+--         rio,
+--         text-short,
+--         unliftio,
+--         stm,
+--         esa-base
